--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
-<hr>
-<h2>layout: home.njk
-title: Abakus</h2>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Abakus</title>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+  <header>
+    <h1><a href="/">ABAKUS</a></h1>
+  </header>
+  <main>
+    <p>Welcome to Abakus.</p>
+
+  </main>
+</body>
+</html>
