--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Abakus</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-  <header>
-    <h1><a href="/">ABAKUS</a></h1>
-  </header>
-  <main>
-    <p>Welcome to Abakus.</p>
-
+  <header><h1>ABAKUS</h1></header>
+  
+  <main class="grid">
+    
+      <a class="thumb" href="/projects/casa-porto/">
+        <img src="/img/casa-porto.jpg" alt="Casa Porto">
+        <h2>Casa Porto</h2>
+        <p>Porto, Portugal – 2023</p>
+      </a>
+    
   </main>
+
 </body>
 </html>
