--- a/projects/casa-porto/index.html
+++ b/projects/casa-porto/index.html
@@ -4,17 +4,24 @@
   <meta charset="UTF-8">
   <title>Casa Porto</title>
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="icon" type="image/png" href="/img/favicon.png">
 </head>
 <body>
   <header>
-    <h1><a href="/">ABAKUS</a></h1>
+    <div class="logo-area">
+      <img src="/img/favicon.png" alt="Logo" class="logo">
+      <h1><a href="/">ABAKUS</a></h1>
+    </div>
     <nav>
+      <input type="text" id="search" placeholder="Search projects...">
       <a href="/">All</a>
       <a href="#" data-filter="house">Houses</a>
       <a href="#" data-filter="cultural">Cultural</a>
       <a href="#" data-filter="2022">2022</a>
       <a href="#" data-filter="2023">2023</a>
       <a href="#" data-filter="2024">2024</a>
+      <a href="/about">About</a>
+      <a href="/contact">Contact</a>
     </nav>
   </header>
   
