--- a/about/index.html
+++ b/about/index.html
@@ -7,34 +7,31 @@
   <link rel="icon" type="image/png" href="/img/favicon.png">
 </head>
 <body>
-  <header>
-    <div class="logo-area">
-      <img src="/img/favicon.png" alt="Logo" class="logo">
-      <h1><a href="/">ABAKUS</a></h1>
-    </div>
-    <nav>
-      <input type="text" id="search" placeholder="Search projects...">
-      <a href="/">All</a>
-      <a href="#" data-filter="house">Houses</a>
-      <a href="#" data-filter="cultural">Cultural</a>
-      <a href="#" data-filter="2022">2022</a>
-      <a href="#" data-filter="2023">2023</a>
-      <a href="#" data-filter="2024">2024</a>
-      <a href="/about">About</a>
-      <a href="/contact">Contact</a>
-    </nav>
-  </header>
-  
-  <article class="project">
-    <h1>About</h1>
-    <p><em>, </em></p>
+  <main>
+    <header>
+      <div class="logo-area">
+        <img src="/img/favicon.png" alt="Logo" class="logo">
+        <h1><a href="/">ABAKUS</a></h1>
+      </div>
+      <nav>
+        <input type="text" id="search" placeholder="Search projects...">
+        <a href="/">All</a>
+        <a href="#" data-filter="house">Houses</a>
+        <a href="#" data-filter="cultural">Cultural</a>
+        <a href="#" data-filter="2022">2022</a>
+        <a href="#" data-filter="2023">2023</a>
+        <a href="#" data-filter="2024">2024</a>
+        <a href="/about">About</a>
+        <a href="/contact">Contact</a>
+      </nav>
+    </header>
+
+    <p>Abakus is an independent archive of architecture projects curated for clarity and typological insight.</p>
+
+
     
-    <div class="body">
-      <p>Abakus is an independent archive of architecture projects curated for clarity and typological insight.</p>
-
-    </div>
-  </article>
-
-  <script src="/js/filter.js"></script>
+    
+    <script src="/js/filter.js"></script>
+  </main>
 </body>
 </html>
