--- a/contact/index.html
+++ b/contact/index.html
@@ -7,24 +7,30 @@
   <link rel="icon" type="image/png" href="/img/favicon.png">
 </head>
 <body>
-  <header>
-    <div class="logo-area">
-      <img src="/img/favicon.png" alt="Logo" class="logo">
-      <h1><a href="/">ABAKUS</a></h1>
-    </div>
-    <nav>
-      <input type="text" id="search" placeholder="Search projects...">
-      <a href="/">All</a>
-      <a href="#" data-filter="house">Houses</a>
-      <a href="#" data-filter="cultural">Cultural</a>
-      <a href="#" data-filter="2022">2022</a>
-      <a href="#" data-filter="2023">2023</a>
-      <a href="#" data-filter="2024">2024</a>
-      <a href="/about">About</a>
-      <a href="/contact">Contact</a>
-    </nav>
-  </header>
-  
+  <main>
+    <header>
+      <div class="logo-area">
+        <img src="/img/favicon.png" alt="Logo" class="logo">
+        <h1><a href="/">ABAKUS</a></h1>
+      </div>
+      <nav>
+        <input type="text" id="search" placeholder="Search projects...">
+        <a href="/">All</a>
+        <a href="#" data-filter="house">Houses</a>
+        <a href="#" data-filter="cultural">Cultural</a>
+        <a href="#" data-filter="2022">2022</a>
+        <a href="#" data-filter="2023">2023</a>
+        <a href="#" data-filter="2024">2024</a>
+        <a href="/about">About</a>
+        <a href="/contact">Contact</a>
+      </nav>
+    </header>
+
+    <p>To submit a project or inquire, please contact us at:</p>
+<p>📧 hello@abakus.studio</p>
+
+
+    
   <article class="project">
     <h1>Contact</h1>
     <p><em>, </em></p>
@@ -36,6 +42,8 @@
     </div>
   </article>
 
-  <script src="/js/filter.js"></script>
+    
+    <script src="/js/filter.js"></script>
+  </main>
 </body>
 </html>
