deploy: 1d5cb02854bca2157ee6d67debceb5feb95663d6

--- a/projects/casa-milan/index.html
+++ b/projects/casa-milan/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Casa Blanca</title>
+  <title>Casa Milan</title>
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="icon" type="image/png" href="/img/favicon.png">
 </head>
@@ -26,16 +26,18 @@
       </nav>
     </header>
 
-    <p>A minimal white home near the Atlantic coast.</p>
+    <h1>Casa Milan</h1>
+<p>A residential project in the heart of Milan.</p>
 
 
     
   <article class="project">
-    <h1>Casa Blanca</h1>
-    <p><em>Lisbon, Portugal, 2023</em></p>
+    <h1>Casa Milan</h1>
+    <p><em>, </em></p>
     
     <div class="body">
-      <p>A minimal white home near the Atlantic coast.</p>
+      <h1>Casa Milan</h1>
+<p>A residential project in the heart of Milan.</p>
 
     </div>
   </article>
