--- a/admin/index.html
+++ b/admin/index.html
@@ -4,10 +4,64 @@
 <head>
   <meta charset="UTF-8" />
   <title>Abakus Admin</title>
+  <script>
+    window.CMS_MANUAL_INIT = true;
+  </script>
+  <script src="https://unpkg.com/decap-cms@3.3.0/dist/decap-cms.js"></script>
 </head>
 
 <body>
-  <script src="https://unpkg.com/decap-cms@3.3.0/dist/decap-cms.js"></script>
+  <script>
+    const user = JSON.parse(localStorage.getItem("netlify-cms-user"));
+    if (user && user.token) {
+      window.CMS.init({
+        config: {
+          backend: {
+            name: "github",
+            repo: "alifiratuzun/abakus",
+            branch: "main",
+            base_url: "https://abakus-studio.netlify.app",
+            auth_scope: "repo",
+            token: user.token
+          },
+          media_folder: "img",
+          public_folder: "/img",
+          collections: [
+            {
+              name: "projects",
+              label: "Projects",
+              folder: "projects",
+              create: true,
+              slug: "{{slug}}",
+              fields: [
+                { label: "Title", name: "title", widget: "string" },
+                { label: "Year", name: "year", widget: "number" },
+                { label: "Location", name: "location", widget: "string" },
+                { label: "Architect", name: "architect", widget: "string" },
+                { label: "Type", name: "type", widget: "string" },
+                { label: "Description", name: "body", widget: "markdown" },
+                {
+                  label: "Images",
+                  name: "images",
+                  widget: "list",
+                  field: { label: "Image", name: "image", widget: "image" }
+                },
+                {
+                  label: "Plans",
+                  name: "plans",
+                  widget: "list",
+                  field: { label: "Plan", name: "plan", widget: "image" }
+                },
+                { label: "Layout", name: "layout", widget: "hidden", default: "project.njk" }
+              ]
+            }
+          ]
+        }
+      });
+    } else {
+      document.body.innerHTML = "Login failed. Please clear cache and try again.";
+    }
+  </script>
 </body>
 
 </html>
