deploy: 35c767214b923325a5af6eb3df2e66c5c9b9dfa7

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
   
   <main class="grid">
     
+      <a class="thumb" href="/projects/casa-armor/" data-type="cultural" data-year="1999">
+        <img src="/img/silver-metallic-textured-background.jpg" alt="Casa Armor">
+        <h2>Casa Armor</h2>
+        <p>Sile – 1999</p>
+      </a>
+    
       <a class="thumb" href="/projects/casa-blanca/" data-type="house" data-year="2022">
         <img src="/img/casa-blanca-1.jpg" alt="Casa Blanca">
         <h2>Casa Blanca</h2>
