deploy: cab386489041ae2084977369ed61b1f27f00e187

--- a/projects/casa-armor/index.html
+++ b/projects/casa-armor/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About | Abakus</title>
+  <title>Casa Armor | Abakus</title>
   <meta name="description" content="Portfolio for Abakus architectural studio.">
 
   <!-- Favicon -->
@@ -12,14 +12,14 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://abakus.studio/">
-  <meta property="og:title" content="About | Abakus">
+  <meta property="og:title" content="Casa Armor | Abakus">
   <meta property="og:description" content="Portfolio for Abakus architectural studio.">
   <meta property="og:image" content="https://abakus.studio/img/casa-blanca-1.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://abakus.studio/">
-  <meta property="twitter:title" content="About | Abakus">
+  <meta property="twitter:title" content="Casa Armor | Abakus">
   <meta property="twitter:description" content="Portfolio for Abakus architectural studio.">
   <meta property="twitter:image" content="https://abakus.studio/img/casa-blanca-1.jpg">
   
@@ -46,10 +46,14 @@
     </nav>
   </header>
   
-  <article class="page">
-    <h1>About</h1>
+  <article class="project">
+    <h1>Casa Armor</h1>
+    <p><em>Sile, 1999</em></p>
+    
+      <img src="/img/silver-metallic-textured-background.jpg" alt="Casa Armor">
+    
     <div class="body">
-      <p>Abakus is an independent archive of architecture projects curated for clarity and typological insight.</p>
+      <p>guzel</p>
 
     </div>
   </article>
