--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
         </div>
       </a>
     
-      <a class="thumb" href="/projects/villa-rock/" data-type="house" data-year="2022">
+      <a class="thumb" href="/projects/villa-rock/" data-type="Religious" data-year="1965">
         <div class="thumb-img-wrapper">
-          <img src="/img/villa-rock-1.jpg" alt="Villa Rock">
+          <img src="/img/tcbh18390201.jpg" alt="Etimesgut Camii">
         </div>
         <div class="thumb-text">
-          <h2>Villa Rock</h2>
-          <p>Rock, Sweden – 2022</p>
+          <h2>Etimesgut Camii</h2>
+          <p>Ankara, Türkiye – 1965</p>
         </div>
       </a>
     
