deploy: b75b7e03f25ccb82ec61ef65d0c26a9cd4a5cb36

--- a/index.html
+++ b/index.html
@@ -102,16 +102,16 @@
       </a>
     
       <a class="thumb" href="/projects/villa-rock/"
-         data-what="undefined"
-         data-who="undefined"
-         data-where="undefined"
-         data-when="undefined">
+         data-what="religious"
+         data-who="cengiz-bektas"
+         data-where="ankara-turkiye"
+         data-when="1965">
         <div class="thumb-img-wrapper">
           <img src="/img/tcbh18390201.jpg" alt="Etimesgut Camii">
         </div>
         <div class="thumb-text">
           <h2>Etimesgut Camii</h2>
-          <p> – </p>
+          <p>Ankara, Türkiye – 1965</p>
         </div>
       </a>
     
