deploy: 72aadf95f48140f4bbf6ed397f555cb2fd9b0a64

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
          data-where="istanbul-turkiye"
          data-when="1992">
         <div class="thumb-img-wrapper">
-          <img src="/img/tcbh18390201.jpg" alt="Gön Deri Fabrikasi - I">
+          <img src="" alt="Gön Deri Fabrikasi - I">
         </div>
         <div class="thumb-text">
           <h2>Gön Deri Fabrikasi - I</h2>
