deploy: 122d869bec74ed0b673a47538a16b33901b8c842

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
          data-where="istanbul-turkiye"
          data-when="1992">
         <div class="thumb-img-wrapper">
-          <img src="" alt="Gön Deri Fabrikasi - I">
+          <img src="" alt="Gön Deri Fabrikası - I">
         </div>
         <div class="thumb-text">
-          <h2>Gön Deri Fabrikasi - I</h2>
+          <h2>Gön Deri Fabrikası - I</h2>
           <div class="thumb-who">Nevzat Sayın</div>
           <p>
             Istanbul, Türkiye<br>
