--- a/projects/gön-deri-fabrikasi-i/index.html
+++ b/projects/gön-deri-fabrikasi-i/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gön Deri Fabrikasi - I | Abakus</title>
+  <title>Gön Deri Fabrikası - I | Abakus</title>
   <meta name="description" content="Portfolio for Abakus architectural studio.">
   <!-- Prevent FOUC: Set theme before CSS loads -->
   <script>
@@ -24,14 +24,14 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://abakus.studio/">
-  <meta property="og:title" content="Gön Deri Fabrikasi - I | Abakus">
+  <meta property="og:title" content="Gön Deri Fabrikası - I | Abakus">
   <meta property="og:description" content="Portfolio for Abakus architectural studio.">
   <meta property="og:image" content="https://abakus.studio/img/casa-blanca-1.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://abakus.studio/">
-  <meta property="twitter:title" content="Gön Deri Fabrikasi - I | Abakus">
+  <meta property="twitter:title" content="Gön Deri Fabrikası - I | Abakus">
   <meta property="twitter:description" content="Portfolio for Abakus architectural studio.">
   <meta property="twitter:image" content="https://abakus.studio/img/casa-blanca-1.jpg">
   
@@ -88,7 +88,7 @@
   <article class="project">
     
       <div class="project-meta">
-        <h1>Gön Deri Fabrikasi - I</h1>
+        <h1>Gön Deri Fabrikası - I</h1>
         <div class="project-meta-info">
           <div class="project-meta-row"><span class="meta-label">Who:</span> Nevzat Sayın</div>
           <div class="project-meta-row"><span class="meta-label">What:</span> Industrial</div>
