deploy: 625e9d1f53bd03bc631736d944f35b92d54ac8cb

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
         <div class="thumb-text">
           <h2>Etimesgut Camii</h2>
-          <div class="thumb-who">Cengiz Bektas</div>
+          <div class="thumb-who">Cengiz Bektaş</div>
           <p>
             Ankara, Türkiye<br>
             <span class="thumb-year">1965</span>
