--- a/projects/etimesgut-camii/index.html
+++ b/projects/etimesgut-camii/index.html
@@ -90,7 +90,7 @@
       <div class="project-meta">
         <h1>Etimesgut Camii</h1>
         <div class="project-meta-info">
-          <div class="project-meta-row"><span class="meta-label">Who:</span> Cengiz Bektas</div>
+          <div class="project-meta-row"><span class="meta-label">Who:</span> Cengiz Bektaş</div>
           <div class="project-meta-row"><span class="meta-label">What:</span> Religious</div>
           <div class="project-meta-row"><span class="meta-label">Where:</span> Ankara, Türkiye</div>
           <div class="project-meta-row"><span class="meta-label">When:</span> 1965</div>
