deploy: 1872d1a7df8ed958b41d134f33b03078c3a849c3

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
          data-where="ankara-turkiye"
          data-when="1965">
         <div class="thumb-img-wrapper">
-          <img src="img/tcbh18390201.jpg" alt="Etimesgut Camii">
+          <img src="/img/tcbh18390201.jpg" alt="Etimesgut Camii">
         </div>
         <div class="thumb-text">
           <h2>Etimesgut Camii</h2>
