deploy: 3a00d1df00a3210ae865b0359804a845bcfbfd42

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
          data-where="istanbul-turkiye"
          data-when="1992">
         <div class="thumb-img-wrapper">
-          <img src="" alt="Gön Deri Fabrikası - I">
+          <img src="/img/web_nsmh_gon1_3.jpg" alt="Gön Deri Fabrikası - I">
         </div>
         <div class="thumb-text">
           <h2>Gön Deri Fabrikası - I</h2>
