deploy: 6d5a889e6b370be7a127007a78cc2cb752f6d53d

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
          data-where="ankara-turkiye"
          data-when="1963">
         <div class="thumb-img-wrapper">
-          <img src="" alt="ODTÜ Mimarlık Fakültesi">
+          <img src="[object Object]" alt="ODTÜ Mimarlık Fakültesi">
         </div>
         <div class="thumb-text">
           <h2>ODTÜ Mimarlık Fakültesi</h2>
