deploy: 27a79c06e33cdbb7a5f3762f5a4efb43c8f77de1

--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> | Abakus</title>
+  <title>Bil | Abakus</title>
   <meta name="description" content="Portfolio for Abakus architectural studio.">
   <!-- Prevent FOUC: Set theme before CSS loads -->
   <script>
@@ -24,14 +24,14 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://abakus.studio/">
-  <meta property="og:title" content=" | Abakus">
+  <meta property="og:title" content="Bil | Abakus">
   <meta property="og:description" content="Portfolio for Abakus architectural studio.">
   <meta property="og:image" content="https://abakus.studio/img/casa-blanca-1.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://abakus.studio/">
-  <meta property="twitter:title" content=" | Abakus">
+  <meta property="twitter:title" content="Bil | Abakus">
   <meta property="twitter:description" content="Portfolio for Abakus architectural studio.">
   <meta property="twitter:image" content="https://abakus.studio/img/casa-blanca-1.jpg">
   
@@ -130,13 +130,13 @@
           </div>
         </div>
       </div>
-      <a href="/about" class="nav-btn">Hakkında</a>
+      <a href="/list" class="nav-btn">Bul</a>
+      <a href="/about" class="nav-btn">Bil</a>
       <button id="theme-switch" aria-label="Toggle dark mode" class="theme-switch nav-btn"></button>
     </nav>
   </header>
   
   <article class="page about-center">
-    <h1></h1>
     <div class="body">
       <p>Abaküs bağımsız bir mimari araştırma arşividir.</p>
 <p><a href="mailto:info@abakus.studio">info@abakus.studio</a></p>
