--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
           </div>
         </div>
       </div>
-      <a href="/about" class="nav-btn">Hakkında</a>
+      <a href="/list" class="nav-btn">Bul</a>
+      <a href="/about" class="nav-btn">Bil</a>
       <button id="theme-switch" aria-label="Toggle dark mode" class="theme-switch nav-btn"></button>
     </nav>
   </header>
@@ -143,7 +144,7 @@
          data-where="ankara-turkiye"
          data-when="1965">
         <div class="thumb-img-wrapper">
-          <img src="[object Object]" alt="Etimesgut Camii">
+          <img src="/img/tcbh18390201.jpg" alt="Etimesgut Camii">
         </div>
         <div class="thumb-text">
           <h2>Etimesgut Camii</h2>
@@ -161,7 +162,7 @@
          data-where="istanbul-turkiye"
          data-when="1992">
         <div class="thumb-img-wrapper">
-          <img src="[object Object]" alt="Gön Deri Fabrikası - I">
+          <img src="/img/web_nsmh_gon1_3.jpg" alt="Gön Deri Fabrikası - I">
         </div>
         <div class="thumb-text">
           <h2>Gön Deri Fabrikası - I</h2>
@@ -179,7 +180,7 @@
          data-where="ankara-turkiye"
          data-when="1963">
         <div class="thumb-img-wrapper">
-          <img src="[object Object]" alt="ODTÜ Mimarlık Fakültesi">
+          <img src="/img/metu-_faculty_of_architecture_-14663256957-.jpg" alt="Stairs">
         </div>
         <div class="thumb-text">
           <h2>ODTÜ Mimarlık Fakültesi</h2>
