deploy: ca13622b935610535552fa6e620c3a4e3632fc5f

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
          data-where="ankara-turkiye"
          data-when="1963">
         <div class="thumb-img-wrapper">
-          <img src="/img/metu-_faculty_of_architecture_-14663256957-.jpg" alt="Stairs">
+          <img src="/img/8-mim4.jpg.jpeg" alt="ODTÜ Mimarlık Fakültesi">
         </div>
         <div class="thumb-text">
           <h2>ODTÜ Mimarlık Fakültesi</h2>
