deploy: a9618d6fbdead8ab1b16a9b47f24c18d24490433

--- a/projects/gön-deri-fabrikasi-i/index.html
+++ b/projects/gön-deri-fabrikasi-i/index.html
@@ -163,7 +163,8 @@
     </div>
   </article>
   
-    <div class="project-footnote">\[1] https://www.nsmh.com/Gon-Deri-Fabrikasi-I</div>
+    <div class="project-footnote">[1] https://www.nsmh.com/Gon-Deri-Fabrikasi-I
+</div>
   
 
   <script src="/js/filter.js"></script>
