deploy: d932266dde680e82a3395b7c6c078f228224bdf4

--- a/projects/odtü-mimarlık-fakültesi/index.html
+++ b/projects/odtü-mimarlık-fakültesi/index.html
@@ -181,9 +181,10 @@
     </div>
   </article>
   
-    <div class="project-footnote">\[1] Bu konu ile ilgili Meltem Ö.Gürel'in 2016'da derlediği Mid-Century Modernism in Turkey kitabında bulunan, Burak Erdim'in, Under the Flags of the Marshall Plan: Multiple Modernisms and Professional Legitimacy in the Cold War Middle East, 1950-1964 makalesini okuyabilirsiniz.<br>
-
-\[2] Arkitekt, Cilt: 1965 Sayı: 1965-03 (320) Sayfa: 108-109, 114.</div>
+    <div class="project-footnote">[1] Bu konu ile ilgili Meltem Ö.Gürel'in 2016'da derlediği Mid-Century Modernism in Turkey kitabında bulunan, Burak Erdim'in, Under the Flags of the Marshall Plan: Multiple Modernisms and Professional Legitimacy in the Cold War Middle East, 1950-1964 makalesini okuyabilirsiniz.
+<br>
+[2] Arkitekt, Cilt: 1965 Sayı: 1965-03 (320) Sayfa: 108-109, 114.
+</div>
   
 
   <script src="/js/filter.js"></script>
