--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <h2>Etimesgut Camii</h2>
           <div class="thumb-who">Cengiz Bektaş</div>
           <p>
-            Ankara<br>
+            Ankara, Türkiye<br>
             <span class="thumb-year">1965</span>
           </p>
         </div>
@@ -161,7 +161,7 @@
           <h2>Gön Deri Fabrikası - I</h2>
           <div class="thumb-who">Nevzat Sayın</div>
           <p>
-            İstanbul<br>
+            İstanbul, Türkiye<br>
             <span class="thumb-year">1992</span>
           </p>
         </div>
@@ -179,7 +179,7 @@
           <h2>ODTÜ Mimarlık Fakültesi</h2>
           <div class="thumb-who">Behruz Çinici, Altuğ Çinici</div>
           <p>
-            Ankara<br>
+            Ankara, Türkiye<br>
             <span class="thumb-year">1963</span>
           </p>
         </div>
