deploy: dd5714755a176dcd2c25f3a2d063ad53aaeec74a

--- a/about/index.html
+++ b/about/index.html
@@ -161,7 +161,7 @@
   
   <article class="page about-center">
     <div class="body">
-      <p>Abaküs bağımsız bir mimari araştırma arşividir.</p>
+      <p>Abaküs, bağımsız bir mimarlık araştırmaları arşividir.</p>
 <p><a href="mailto:info@abakus.studio">info@abakus.studio</a></p>
 
     </div>
