--- a/projects/etimesgut-camii/index.html
+++ b/projects/etimesgut-camii/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Etimesgut Camii | Abakus</title>
+  <title>Etimesgut Camii</title>
   <meta name="description" content="Portfolio for Abakus architectural studio.">
   <!-- Prevent FOUC: Set theme before CSS loads -->
   <script>
