--- a/projects/gön-deri-fabrikasi-i/index.html
+++ b/projects/gön-deri-fabrikasi-i/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Gön Deri Fabrikası - I | Abakus</title>
+  <title>Gön Deri Fabrikası - I</title>
   <meta name="description" content="Portfolio for Abakus architectural studio.">
   <!-- Prevent FOUC: Set theme before CSS loads -->
   <script>
